--- a/main.css
+++ b/main.css
@@ -1,10 +1,25 @@
 body {
-  font-family: 'Lato', sans-serif;
+  height: 100vh;
+  font-family: 'Montserrat', sans-serif;
+  font-size: medium;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
-div {
+section {
+  width: 60%;
+  height: 15vh;
+  margin: 0 auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
+  border-radius: 10px;
+}
+
+.digit {
+  width: 28px;
+  font-size: x-large;
+  padding: 0 2px;
+  text-align: center;
 }
