--- a/main.css
+++ b/main.css
@@ -7,6 +7,11 @@ body {
   justify-content: center;
 }
 
+a {
+  color: black;
+  text-decoration: none;
+}
+
 section {
   width: 60%;
   height: 15vh;
@@ -22,4 +27,20 @@ section {
   font-size: x-large;
   padding: 0 2px;
   text-align: center;
+}
+
+footer {
+  width: 60%;
+  margin: 0 auto;
+}
+
+.github-link {
+  display: flex;
+  justify-content: flex-end;
+  padding: 3px 10px 0 0;
+}
+
+.username {
+  font-size: small;
+  padding-left: 3px;
 }
