--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
   height: 100vh;
   font-family: 'Montserrat', sans-serif;
-  font-size: medium;
+  font-size: large;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,9 +16,15 @@ a:hover {
   color: blue;
 }
 
-section {
-  width: 60%;
-  height: 15vh;
+main {
+  width: 30%;
+  min-width: 300px;
+  max-width: 500px;
+  margin: 0 auto;
+}
+
+#panel {
+  height: 110px;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -26,25 +32,42 @@ section {
   border-radius: 10px;
 }
 
+.hexclock {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 .digit {
-  width: 28px;
-  font-size: x-large;
-  padding: 0 2px;
+  width: 4rem;
+  font-size: 3rem;
   text-align: center;
 }
 
-footer {
-  width: 60%;
-  margin: 0 auto;
-}
 
 .github-link {
   display: flex;
+  align-items: center;
   justify-content: flex-end;
   padding: 3px 10px 0 0;
 }
 
 .username {
-  font-size: small;
+  font-size: medium;
   padding-left: 3px;
+}
+
+@media (min-width: 2560px) {
+  body {
+    font-size: 2rem;
+  }
+
+  .digit {
+    width: 5rem;
+    font-size: 4rem;
+  }
+
+  .username {
+    font-size: x-large;
+  }
 }
