--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 body {
-  height: 100vh;
+  height: 95vh;
   font-family: 'Montserrat', sans-serif;
-  font-size: large;
+  font-size: 16px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -17,22 +17,39 @@ a:hover {
 }
 
 main {
-  width: 30%;
+  width: 50%;
   min-width: 300px;
   max-width: 500px;
   margin: 0 auto;
 }
 
-#panel {
-  height: 110px;
+.panel {
+  height: 15vh;
   margin: 0 auto;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   border-radius: 10px;
 }
 
+.panel-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.6s;
+  transform-style: preserve-3d;
+}
+
+.btn {
+  padding: 3px 10px 0 10px;
+}
+
+.info-btn {
+  text-align: right;
+}
+
 .hexclock {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   display: flex;
   align-items: center;
   justify-content: center;
@@ -44,6 +61,30 @@ main {
   text-align: center;
 }
 
+.panel-front, .panel-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+}
+
+.panel-back {
+  border-radius: 10px;
+  transform: rotateY(180deg);
+}
+
+.info {
+  margin: 0 1rem;
+}
+
+.info h1 {
+  margin: 0 10px;
+}
+
+.info p {
+  margin: 5px 10px;
+  text-align: left;
+}
 
 .github-link {
   display: flex;
@@ -53,7 +94,6 @@ main {
 }
 
 .username {
-  font-size: medium;
   padding-left: 3px;
 }
 
@@ -62,12 +102,12 @@ main {
     font-size: 2rem;
   }
 
+  main {
+    max-width: 768px;
+  }
+
   .digit {
     width: 5rem;
     font-size: 4rem;
-  }
-
-  .username {
-    font-size: x-large;
   }
 }
